[kcm] Update selected connection when opening KCM a second time

BUG: 461568